[Fuchsia] Fix CHECK() when shutting down web.Frame.

FrameImpl was destroying FocusController without removing it from list
of window event handlers, which was causing CHECK in the destructor.

Bug: 906785
Change-Id: I78bb13a60e9e56ce663cfba9f6ded0357c3bab4c
Reviewed-on: https://chromium-review.googlesource.com/c/1344749
Reviewed-by: Scott Graham <scottmg@chromium.org>
Commit-Queue: Sergey Ulanov <sergeyu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#609799}
Former-commit-id: f16438e53da8e6b74e0799fd39f1eb54df48a744